Hover support for Paths